--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "module": "ES2022",
+      "module": "CommonJS",
       "noImplicitAny": true,
       "sourceMap": false,
       "lib": ["DOM", "ES2022"],
