--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -50,9 +50,9 @@ jobs:
             git switch -C ghpages
             for entry in "$(pwd)"/*
             do
-                base_name=$(basename $entry)
+                base_name=$(basename "$entry")
                 if [[ $base_name != "docs" ]]; then
-                    git rm -r $entry
+                    git rm -r "$entry"
                 fi
             done
             git add .
