--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -51,7 +51,7 @@ jobs:
             for entry in "$(pwd)"/*
             do
                 base_name=$(basename "$entry")
-                if [[ $base_name != "docs" ]]; then
+                if [[ "$base_name" != "docs" ]]; then
                     git rm -r "$entry"
                 fi
             done
