--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -53,7 +53,7 @@ jobs:
             for entry in "$(pwd)"/*
             do
                 base_name=$(basename "$entry")
-                if [[ "$base_name" != "$RUNTIME_DIR" ]]; then
+                if [[ "$base_name" != "$RUNTIME_DIR" && "$base_name" != ".git" ]]; then
                     rm -rf "$entry"
                 fi
             done
