--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "sourceMap": false,
       "lib": ["DOM", "ES2022"],
       "types": ["@types/node"],
-      "strict": true
+      "strict": true,
+      "target": "ES2020"
     },
     "include": ["src/**/*.ts"]
   }
