--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/iron-HYDROPERFOX/runtime#readme",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^22.1.0",
     "rollup": "^4.19.2",
     "typedoc": "^0.26.5"
