--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.hydroperfox.iron",
+  "name": "com.hydroperfox.ie",
   "version": "1.0.0",
   "description": "Iron runtime",
   "main": "src/index.ts",
